<resources>
    <!-- titulos -->
    <string name="app_name">Alpha Runner</string>
    <string name="title_activity_datos">"Mis Datos"</string>
    <string name="title_activity_data">Mis Datos</string>
    <string name="title_activity_prueba">Entrenamiento</string>
    <!-- menu_main -->
    <string name="menu_settings">Opciones</string>
    <string name="menu_data">Mis Datos</string>
    <string name="menu_plan">Entrenamiento</string>
    <!-- navbar -->
    <string name="seccion_1">"Seccion 1"</string>
    <string name="seccion_2">"Seccion 2"</string>
    <string name="seccion_3">"Seccion 3"</string>
    <string name="otras_opciones">"Otras opciones..."</string>
    <string name="opcion_1">"Opcion 1"</string>
    <string name="opcion_2">"Opcion 2"</string>
    <string name="opcion_3">"Opcion 3"</string>
    <!-- Botones -->
    <string name="btn_accept">"Aceptar"</string>
    <string name="btn_nxt">Next</string>
    <!-- Datos Persoanles -->
    <string name="cv_data_init">Estado Inicial</string>
    <string name="cv_data_goal">Meta</string>
    <string name="data_init_descrip">Introduce tus datos segun tu ultima prueba.</string>
    <string name="data_goal_descrip">Introduce los datos de tu meta a alcanzar.</string>
    <string name="hint_dist">(Metros)</string>
    <string name="hint_time">(Min:Seg)</string>
    <string name="hint_hour">Horas</string>
    <string name="hint_min">Minutos</string>
    <string name="hint_seg">Segundos</string>
    <string name="hint_total_weeks">Semanas a entrenar</string>
    <string name="hint_days_per_week">Dias a entrenar por semana</string>
    <string name="data_init_ritmo">Ritmo: </string>
    <string name="data_goal_ritmo">Ritmo: </string>
    <string name="make_plan">Crear Plan!</string>
    <string name="calc_init">Calcular</string>
    <!-- Plan  -->
    <string name="hint_semana">No. Semana:</string>
    <string name="hint_dia">No. Día:</string>
    <string name="btn_plan_ver">ver</string>
    <string name="txt_plan_tipo">Fondo/Velocidad\n</string>
    <string name="txt_plan_distancia">Distancia: \n</string>
    <string name="txt_plan_tiempo_trabajo">Tiempo de Trabajo: \n</string>
    <string name="txt_plan_tiempo_descanso">Tiempo de Descanso: \n</string>
    <string name="txt_plan_vueltas">Vueltas: \n</string>
    <!-- Otros: -->
    <string name="nombre">"Escribe tu Nombre:"</string>
    <string name="tarjeta_1">
        Hola, te sientes listo para empezar no? \nPero primero debes saber que esta aplicacion esta planeada para diseñar un plan de entrenamiento para una distancia entre 1,500 y 10,000 metros y para minimo 3 dias por semana durante 4 semanas.
    </string>
    <!--string name="tarjeta_1">"Haz de estar deseando empezar ya no? \n Solo queremos decirte que la aplicacion podria no lograr diseñar un correcto programa si hay algun problema con los datos introducidos. \n (por ejeplo que la duracion del programa sea muy corta) "</string-->
    <string name="loremipsum">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>
    <string name="usuario">"Hola que hace usuario? :V"</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
