<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="3pt"
    android:paddingRight="3pt"
    android:paddingTop="3pt"
    android:paddingBottom="3pt"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_prueba"
    tools:context="com.mycompany.prueba1.PlanActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/cv_plan_seleccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardBackgroundColor="#03A9F4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/TiL_plan_semana"
                            android:layout_width="60pt"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/txt_plan_semana"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="15dp"
                                android:hint="@string/hint_semana"
                                android:inputType="number"/>
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/TiL_plan_dia"
                            android:layout_width="60pt"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/txt_plan_dia"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="15dp"
                                android:hint="@string/hint_dia"
                                android:inputType="number"/>
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="50pt">

                        <Button android:id="@+id/btn_plan_ver"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:padding="4dp"
                            android:layout_marginTop="6pt"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentBottom="true"
                            android:text="@string/btn_plan_ver"
                            android:textColor="#666"
                            style="?android:attr/borderlessButtonStyle"/>
                    </RelativeLayout>
                </LinearLayout><!-- horizontal -->

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6pt"
                card_view:cardBackgroundColor="#FFC107">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4pt"
                    android:layout_marginLeft="4pt"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_plan_tipo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_plan_tipo"/>

                    <TextView
                        android:id="@+id/txt_plan_distancia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4pt"
                        android:text="@string/txt_plan_distancia"/>

                    <TextView
                        android:id="@+id/txt_plan_tiempo_trabajo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2pt"
                        android:text="@string/txt_plan_tiempo_trabajo"/>

                    <TextView
                        android:id="@+id/txt_plan_tiempo_descanzo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2pt"
                        android:text="@string/txt_plan_tiempo_descanso"/>

                    <TextView
                        android:id="@+id/txt_plan_vueltas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2pt"
                        android:layout_marginBottom="2pt"
                        android:text="@string/txt_plan_vueltas"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
